# climbing-moonboard-ai

./: LICENSE  LSTM_BoulderProblem.ipynb  README.md  lstm_boulderproblem.py  pyproject.toml
Data/: 7B.json
Moonboard-40degrees-Problems/: 6A+.json  6C+.json  7A.json  7B+.json  7C+.json  7C.json
artifacts/: __init__.py
artifacts/data/: 6B+.json  6B.json  6C.json  7A+.json
climbing_ai/: lstm_simple.py  moonboard_dataset.py  moonboard_evaluation.py  moonboard_tokenizer.py  wolfbert.py  wolfbert_simple.py
notebooks/: dataset_eda.ipynb  lstm-rnn.ipynb  simple-encoder.ipynb  wolfbert.ipynb
tests/: test_dataset.py  test_relative_position.py  test_tokenizer.py
